src/test/k3s/test/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  rules:
    - host: keycloak.127.0.0.1.nip.io
      http:
        paths:
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: management
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: management
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
          - path: /realms/master
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
          - path: /resources
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
          - path: /js
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
    - host: auth.kokuwa.127.0.0.1.nip.io
      http:
        paths:
          - path: /realms/kokuwa
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
          - path: /resources
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
          - path: /js
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
    - host: auth.test.127.0.0.1.nip.io
      http:
        paths:
          - path: /realms/test
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
          - path: /resources
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
          - path: /js
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
