src/test/k3s/test/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: cache
      port: 11222
      targetPort: cache
  selector:
    app.kubernetes.io/name: keycloak
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-headless
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: keycloak
